[tool.poetry]
name = "tenis-date-register"
version = "0.1.0"
description = ""
authors = ["ryu.aizawa <zeku.bushinryu38@gmail.com>"]
readme = "README.md"
packages = [{include = "tenis_date_register"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
